design registration and push class with key in Authentication

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,10 +97,11 @@
         android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
         android:layout_marginHorizontal="45sp"
         android:drawableLeft="@drawable/ic_email"
         android:hint=" Почта"
+        android:inputType="textEmailAddress"
+        android:maxLength="25"
         android:scrollbarThumbHorizontal="@null"
         android:scrollbarThumbVertical="@null"
         android:textColor="#5A3D30"
@@ -124,6 +125,7 @@
         android:drawableLeft="@drawable/ic_password"
         android:hint=" Пароль"
         android:inputType="textPassword"
+        android:maxLength="15"
         android:textColor="#5A3D30"
         android:textSize="20sp"
         android:theme="@style/Theme.MyLyceum"
