--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,88 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/login_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="#9C27B0"
+    android:backgroundTint="@color/white"
+    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="45sp"
-        android:layout_marginTop="305sp"
-        android:ems="10"
-        android:hint="Пароль"
-        android:inputType="textPassword"
-        android:maxLength="15"
-        android:textColorLink="#FF5722"
-        android:textSize="24sp" />
 
-    <ImageButton
-        android:id="@+id/eye"
-        android:layout_width="35dp"
-        android:layout_height="64dp"
-        android:layout_alignEnd="@id/password"
-        android:layout_marginTop="300sp"
-        android:backgroundTint="#00FFFFFF"
-        app:srcCompat="@drawable/ic_view" />
-
-    <EditText
-        android:id="@+id/login"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/vk_link"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="45sp"
-        android:layout_marginTop="255sp"
-        android:ems="10"
-        android:hint="Логин"
-        android:inputType="textPersonName"
-        android:maxLength="15"
-        android:textSize="24sp" />
+        android:autoLink=""
+        android:background="#FF764B"
+        android:backgroundTint="#FF7448"
+        android:backgroundTintMode="screen"
+        android:drawableLeft="@drawable/ic_vk"
+        android:text="Мы Вконтакте"
+        android:textColor="#5A3D30"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.823" />
 
     <Button
         android:id="@+id/signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/login"
-        android:layout_marginHorizontal="60sp"
-        android:layout_marginTop="190sp"
-        android:text="Зарегистрироваться" />
+        android:layout_marginHorizontal="95sp"
+        android:text="Регистрация"
+        android:textColor="#5A3D30"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.679" />
+
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="111dp"
+        android:layout_height="149dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/poet" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="cursive"
+        android:text="2022 "
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.329"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.886" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="cursive"
+        android:text="Pushkinisti©"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.63"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.884" />
 
     <EditText
-        android:id="@+id/class_user"
+        android:id="@+id/login_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/login"
         android:layout_marginHorizontal="45sp"
-        android:layout_marginTop="-108sp"
-        android:hint="Класс"
+        android:drawableLeft="@drawable/ic_email"
+        android:hint=" Почта"
+        android:inputType="textEmailAddress"
+        android:maxLength="25"
+        android:scrollbarThumbHorizontal="@null"
+        android:scrollbarThumbVertical="@null"
+        android:textColor="#5A3D30"
+        android:textSize="20sp"
+        android:theme="@style/Theme.MyLyceum"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.309">
+
+    </EditText>
+
+    <EditText
+        android:id="@+id/password_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="45sp"
+        android:drawableLeft="@drawable/ic_password"
+
+        android:hint=" Пароль"
+
+        android:maxLength="15"
+        android:textColor="#5A3D30"
+        android:textSize="20sp"
+        android:theme="@style/Theme.MyLyceum"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.421">
+
+    </EditText>
+
+    <EditText
+        android:id="@+id/Classuser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="45sp"
+        android:drawableLeft="@drawable/ic_class"
+        android:hint=" Класс"
+        android:inputType="textEmailAddress"
         android:maxLength="3"
-        android:textSize="24sp" />
+        android:scrollbarThumbHorizontal="@null"
+        android:scrollbarThumbVertical="@null"
+        android:textColor="#5A3D30"
+        android:textSize="20sp"
+        android:theme="@style/Theme.MyLyceum"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.526"></EditText>
 
-    <EditText
-        android:id="@+id/name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_marginHorizontal="45sp"
-        android:inputType="textPersonName"
-        android:hint="Имя"
-        android:textSize="24sp"
-        android:layout_below="@id/password" />
-
-    <EditText
-        android:id="@+id/surname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/name"
-        android:layout_marginHorizontal="45sp"
-        android:ems="10"
-        android:hint="Фамилия"
-        android:inputType="textPersonName"
-        android:textSize="24sp" />
-
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
