--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -40,6 +40,7 @@
                         android:layout_height="match_parent">
 
                         <ScrollView
+                            android:id="@+id/pn"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
 
@@ -101,10 +102,13 @@
                                                 android:gravity="center_horizontal"
                                                 android:paddingTop="10sp"
                                                 android:text="Кабинет 303" />
+
+
                                         </RelativeLayout>
 
                                     </androidx.cardview.widget.CardView>
                                 </RelativeLayout>
+
                                 <RelativeLayout
                                     android:id="@+id/relativers2"
                                     android:layout_width="match_parent"
@@ -162,10 +166,12 @@
 
                                     </androidx.cardview.widget.CardView>
                                 </RelativeLayout>
+
                                 <RelativeLayout
                                     android:id="@+id/relativers4"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent">
+
                                     <androidx.cardview.widget.CardView
                                         android:id="@+id/carder4"
                                         style="@style/MyCardViewStyle"
@@ -218,6 +224,7 @@
 
                                     </androidx.cardview.widget.CardView>
                                 </RelativeLayout>
+
                                 <RelativeLayout
                                     android:id="@+id/relativers"
                                     android:layout_width="match_parent"
@@ -295,63 +302,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
-                        <RelativeLayout
+                        <ScrollView
+                            android:id="@+id/vt"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
+                        </ScrollView>
 
-                            <androidx.cardview.widget.CardView
-                                android:id="@+id/card_view2"
-                                style="@style/MyCardViewStyle"
-                                android:layout_width="match_parent"
-                                android:layout_height="150sp"
-                                android:layout_gravity="center"
-                                android:layout_marginHorizontal="16dp"
-                                android:layout_marginVertical="16dp"
-                                app:cardCornerRadius="4dp"
-                                app:contentPaddingBottom="0sp"
-                                app:contentPaddingLeft="0sp"
-                                app:contentPaddingRight="0sp"
-                                app:contentPaddingTop="0sp"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                tools:layout_editor_absoluteX="16dp">
-
-                                <RelativeLayout
-                                    android:id = "@+id/cardlayout2"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent">
-
-                                    <TextView
-                                        android:id="@+id/texter2"
-                                        style="@style/LeftTextViewStyle"
-                                        android:layout_width="150sp"
-                                        android:layout_height="match_parent"
-                                        android:gravity="center"
-                                        android:text="8.00\n-\n8.45" />
-
-                                    <TextView
-                                        android:id="@+id/texter2_1"
-                                        style="@style/RightTextViewStyle"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="75sp"
-                                        android:layout_toRightOf="@+id/texter2"
-                                        android:gravity="center_horizontal"
-                                        android:paddingTop="40sp"
-                                        android:text="Алгебра" />
-
-                                    <TextView
-                                        android:id="@+id/texter2_2"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="75sp"
-                                        android:layout_below="@+id/texter2_1"
-                                        android:layout_toRightOf="@+id/texter2"
-                                        android:gravity="center_horizontal"
-                                        android:paddingTop="10sp"
-                                        android:text="Кабинет 303" />
-                                </RelativeLayout>
-
-                            </androidx.cardview.widget.CardView>
-
-                        </RelativeLayout>
                     </LinearLayout>
                 </LinearLayout>
 
@@ -365,11 +321,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" >
 
-                        <Button
-                            android:id="@+id/button3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Кнопка на третьей вкладке" />
+                        <ScrollView
+                            android:id="@+id/sr"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+                        </ScrollView>
                     </LinearLayout>
                 </LinearLayout>
 
@@ -384,11 +340,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" >
 
-                        <Button
-                            android:id="@+id/button4"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Кнопка на четвертой вкладке" />
+                        <ScrollView
+                            android:id="@+id/cht"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+                        </ScrollView>
                     </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
@@ -402,11 +358,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" >
 
-                        <Button
-                            android:id="@+id/button5"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Кнопка на пятой вкладке" />
+                        <ScrollView
+                            android:id="@+id/pt"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+                        </ScrollView>
                     </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
@@ -420,11 +376,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" >
 
-                        <Button
-                            android:id="@+id/button6"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Кнопка на шестой вкладке" />
+                        <ScrollView
+                            android:id="@+id/sbt"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+                        </ScrollView>
+
                     </LinearLayout>
                 </LinearLayout>
             </FrameLayout>
