--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -124,25 +124,29 @@
 
     </EditText>
 
-    <EditText
-        android:id="@+id/Classuser"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="45sp"
-        android:drawableLeft="@drawable/ic_class"
-        android:hint=" Класс"
-        android:inputType="textEmailAddress"
-        android:maxLength="3"
-        android:scrollbarThumbHorizontal="@null"
-        android:scrollbarThumbVertical="@null"
-        android:textColor="#5A3D30"
-        android:textSize="20sp"
-        android:theme="@style/Theme.MyLyceum"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="95dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/signup"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.526"></EditText>
+        app:layout_constraintTop_toBottomOf="@+id/password_user">
+
+        <Spinner
+            android:id="@+id/class_numb"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/class_number"
+            android:layout_weight="1" />
+
+        <Spinner
+            android:id="@+id/class_bukv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/nachal_class"
+            android:layout_weight="1" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
