--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
+    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -25,7 +25,6 @@
             android:layout_marginBottom="62dp"
             android:alpha="0.75"
             android:autoLink="web"
-            android:autoText="false"
             android:text="Вконтакте"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -35,13 +34,14 @@
 
         <Button
             android:id="@+id/telegrem"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="237dp"
             android:layout_height="48dp"
             android:layout_marginBottom="118dp"
             android:alpha="0.75"
             android:autoLink="web"
             android:text="Telegram"
-            android:textColor="#FFFFFF"
+            android:textColor="#5A3D30"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
